--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@ alarm <span class="pl-s1"><span class="pl-pds">"</span>alarm1<span class="pl-pds
 alarm <span class="pl-s1"><span class="pl-pds">"</span>alarm2<span class="pl-pds">"</span></span> <span class="pl-k">do</span>
   ...
 <span class="pl-k">end</span></pre></div>
+
+<h2>
+<a id="similar-tools" class="anchor" href="#similar-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Similar tools</h2>
+
+<ul>
+<li><a href="http://codenize.tools/">Codenize.tools</a></li>
+</ul>
       </section>
     </div>
 
