redirect to github

--- a/index.html
+++ b/index.html
@@ -1,136 +1,13 @@
 <!DOCTYPE html>
 <html>
-
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Radiosonde : Radiosonde is a tool to manage CloudWatch Alarm. It defines the state of CloudWatch Alarm using DSL, and updates CloudWatch Alarm according to DSL.">
-
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Radiosonde</title>
-  </head>
-
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/winebarrel/radiosonde">View on GitHub</a>
-
-          <h1 id="project_title">Radiosonde</h1>
-          <h2 id="project_tagline">Radiosonde is a tool to manage CloudWatch Alarm. It defines the state of CloudWatch Alarm using DSL, and updates CloudWatch Alarm according to DSL.</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/winebarrel/radiosonde/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/winebarrel/radiosonde/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h1>
-<a id="radiosonde" class="anchor" href="#radiosonde" aria-hidden="true"><span class="octicon octicon-link"></span></a>Radiosonde</h1>
-
-<p><a href="http://badge.fury.io/rb/radiosonde"><img src="https://badge.fury.io/rb/radiosonde.svg" alt="Gem Version"></a></p>
-
-<h2>
-<a id="installation" class="anchor" href="#installation" aria-hidden="true"><span class="octicon octicon-link"></span></a>Installation</h2>
-
-<p>Add this line to your application's Gemfile:</p>
-
-<pre><code>gem 'radiosonde'
-</code></pre>
-
-<p>And then execute:</p>
-
-<pre><code>$ bundle
-</code></pre>
-
-<p>Or install it yourself as:</p>
-
-<pre><code>$ gem install radiosonde
-</code></pre>
-
-<h2>
-<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Usage</h2>
-
-<div class="highlight highlight-sh"><pre><span class="pl-s">export</span> AWS_ACCESS_KEY_ID=<span class="pl-s1"><span class="pl-pds">'</span>...<span class="pl-pds">'</span></span>
-<span class="pl-s">export</span> AWS_SECRET_ACCESS_KEY=<span class="pl-s1"><span class="pl-pds">'</span>...<span class="pl-pds">'</span></span>
-<span class="pl-s">export</span> AWS_REGION=<span class="pl-s1"><span class="pl-pds">'</span>us-east-1<span class="pl-pds">'</span></span>
-radiosonde -e -o Alarmfile  <span class="pl-c"># export CloudWatch Alarm</span>
-vi Alarmfile
-radiosonde -a --dry-run
-radiosonde -a               <span class="pl-c"># apply `Alarmfile` to CloudWatch</span></pre></div>
-
-<h2>
-<a id="help" class="anchor" href="#help" aria-hidden="true"><span class="octicon octicon-link"></span></a>Help</h2>
-
-<pre><code>Usage: radiosonde [options]
-    -p, --profile PROFILE_NAME
-    -k, --access-key ACCESS_KEY
-    -s, --secret-key SECRET_KEY
-    -r, --region REGION
-    -a, --apply
-    -f, --file FILE
-        --dry-run
-    -e, --export
-    -o, --output FILE
-        --show-metrics
-        --show-dimensions
-        --show-statistics
-        --namespace NAMESPACE
-        --metric-name NAME
-        --start-time TIME
-        --end-time TIME
-        --statistic STATISTIC
-        --no-color
-        --debug
-</code></pre>
-
-<h2>
-<a id="alarmfile-example" class="anchor" href="#alarmfile-example" aria-hidden="true"><span class="octicon octicon-link"></span></a>Alarmfile example</h2>
-
-<div class="highlight highlight-ruby"><pre><span class="pl-k">require</span> <span class="pl-s1"><span class="pl-pds">'</span>other/alarmfile<span class="pl-pds">'</span></span>
-
-alarm <span class="pl-s1"><span class="pl-pds">"</span>alarm1<span class="pl-pds">"</span></span> <span class="pl-k">do</span>
-  namespace <span class="pl-s1"><span class="pl-pds">"</span>AWS/EC2<span class="pl-pds">"</span></span>
-  metric_name <span class="pl-s1"><span class="pl-pds">"</span>CPUUtilization<span class="pl-pds">"</span></span>
-  dimensions <span class="pl-s1"><span class="pl-pds">"</span>InstanceId<span class="pl-pds">"</span></span>=&gt;<span class="pl-s1"><span class="pl-pds">"</span>i-XXXXXXXX<span class="pl-pds">"</span></span>
-  period <span class="pl-c1">300</span>
-  statistic <span class="pl-c1">:average</span>
-  threshold <span class="pl-s1"><span class="pl-pds">"</span>&gt;=<span class="pl-pds">"</span></span>, <span class="pl-c1">50.0</span>
-  evaluation_periods <span class="pl-c1">1</span>
-  actions_enabled <span class="pl-c1">true</span>
-  alarm_actions []
-  ok_actions []
-  insufficient_data_actions [<span class="pl-s1"><span class="pl-pds">"</span>arn:aws:sns:us-east-1:123456789012:my_topic<span class="pl-pds">"</span></span>]
-<span class="pl-k">end</span>
-
-alarm <span class="pl-s1"><span class="pl-pds">"</span>alarm2<span class="pl-pds">"</span></span> <span class="pl-k">do</span>
-  ...
-<span class="pl-k">end</span></pre></div>
-
-<h2>
-<a id="similar-tools" class="anchor" href="#similar-tools" aria-hidden="true"><span class="octicon octicon-link"></span></a>Similar tools</h2>
-
-<ul>
-<li><a href="http://codenize.tools/">Codenize.tools</a></li>
-</ul>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Radiosonde maintained by <a href="https://github.com/winebarrel">winebarrel</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
+<head>
+<link rel="canonical" href="https://github.com/winebarrel/radiosonde"/>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<meta http-equiv="refresh" content="0;url=https://github.com/winebarrel/radiosonde" />
+</head>
+<body>
+    <h1>Redirecting...</h1>
+      <a href="https://github.com/winebarrel/radiosonde">Click here if you are not redirected.<a>
+      <script>location='https://github.com/winebarrel/radiosonde'</script>
+</body>
 </html>
